using UnityEngine;
using UnityEngine.UI;

namespace Views
{
	public class GameWindowPrefabLinks : MonoBehaviour
	{
		public Button QuitGameButton;
	}
}