using UnityEngine;

namespace Views
{
	public interface ILoadingWindow : IWindow
	{
		
	}
}