using UnityEngine;

namespace Views
{
	public class LoadingViewPrefabLinks : MonoBehaviour
	{
		public GameObject Spinner;
	}
}