using TMPro;
using UnityEngine;
using UnityEngine.UI;

namespace Views
{
	public class LobbyWindowPrefabLinks : MonoBehaviour
	{
		public TMP_Text Coins;
		public TMP_Text DeltaTime;
		public Button RequestButton;
		public Button StartGameButton;
	}
}